@@ -652,6 +652,7 @@ bool GuildProcs(int spec)
     case SPEC_TRAINER_LORE:
     case SPEC_TRAINER_THEOLOGY:
     case SPEC_TRAINER_DEFENSE:
+    case SPEC_TRAINER_OFFENSE:
     case SPEC_TRAINER_SHAMAN_HEALING:
       return TRUE;
     default:
