@@ -1,3 +1,6 @@
+06-21-20 : New Discipline for Thieves and Monks called Offensive ABilities 
+            and a Advanced Offense skill.
+
 05-01-20 : New Skill! Focused Avoidance is available in the advanced defense 
             disc. This should help reduce the amount of time warriors and
             deikhans spend on their butts.
